# cloud-neigh

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-cloudy-neigh  bazel-out  bazel-testlogs  deps.bzl  go.mod  go.sum
.github/workflows/: acion.yaml
benchmark/: BUILD.bazel  benckmark_test.go
blas/: BUILD.bazel  dot.go  dot_test.go
cmd/: BUILD.bazel  example.go
cmd/pebble/: BUILD.bazel  main.go
document/: BUILD.bazel  document.go
embeddings/: embedding.go  openai.go
experimental/cmd/bluge-indexer/: BUILD.bazel  bluge-indexer.go
experimental/cmd/bluge-search/: BUILD.bazel  bluge-search.go
experimental/cmd/bluge-vector-search/: BUILD.bazel  bluge-vector-search.go
experimental/cmd/openai/: BUILD.bazel  openai.go
lsh/: BUILD.bazel  lsh.go
openai/: BUILD.bazel  embedder.go  embedding.go  openai.go
vector/: BUILD.bazel  vector.go
