load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["example.go"],
    importpath = "https:/github.com/iampat/cloudy-neigh/cmd",
    visibility = ["//visibility:private"],
    deps = ["@org_gonum_v1_hdf5//:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
