load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bluge-search_lib",
    srcs = ["bluge-search.go"],
    importpath = "https:/github.com/iampat/cloudy-neigh/experimental/cmd/bluge-search",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_blugelabs_bluge//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
    ],
)

go_binary(
    name = "bluge-search",
    embed = [":bluge-search_lib"],
    visibility = ["//visibility:public"],
)
