load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bluge-search_lib",
    srcs = ["bluge-search.go"],
    importpath = "github.com/iampat/cloudy-neigh/experimental/cmd/bluge-search",
    visibility = ["//visibility:private"],
    deps = [
        "//lsh",
        "//openai",
        "@com_github_blugelabs_bluge//:bluge",
        "@com_github_fatih_color//:color",
    ],
)

go_binary(
    name = "bluge-search",
    embed = [":bluge-search_lib"],
    visibility = ["//visibility:public"],
)
