load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bluge-vector-search_lib",
    srcs = ["bluge-vector-search.go"],
    importpath = "github.com/iampat/cloudy-neigh/experimental/cmd/bluge-vector-search",
    visibility = ["//visibility:private"],
    deps = ["@com_github_blugelabs_bluge//:bluge"],
)

go_binary(
    name = "bluge-vector-search",
    embed = [":bluge-vector-search_lib"],
    visibility = ["//visibility:public"],
)
