load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "openai_lib",
    srcs = ["openai.go"],
    importpath = "https:/github.com/iampat/cloudy-neigh/experimental/cmd/openai",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "openai",
    embed = [":openai_lib"],
    visibility = ["//visibility:public"],
)
